syntax = "proto3";
import "Role.proto";
//protoc --proto_path=src\main\java\com\game\protobuf --java_out=src\main\java src\main\java\com\game\protobuf\MsgRoleInfo.proto

option java_package = "com.hailintang.client.protobuf.protoc";
option java_outer_classname = "MsgBossInfoProto";

enum RequestType{
    ENTERDUPLICATE = 0; //进入副本
    CREATETEAM = 1; //创建队伍
    JOINTEAM = 2;   //加入队伍
    EXITTEAM = 3;   //退出队伍
    DISMISSTEAM = 4;    //解散队伍
    QUERYTEAM = 5;      //查询队伍
    TEAMENTERDUPLICATE = 6; //团队进入副本
    USESKILLATTACKBOSS = 7; //攻击boss
}

message RequestBossInfo{
    string requestId = 1;       // 请求id
    int32 userId = 2;           // 请求的uid
    string bossName = 3;            //目的地
    RequestType type = 4;      // 请求类型
    string skillName = 5;       //技能名称
    string mapName = 6;         //地图名称
    string teamName = 7;        //队伍名称
}

message ResponseBossInfo{
    int32 result = 1;           // 返回结果
    int32 userId = 2;           // 返回的uid
    string content = 3;         // 返回内容
    RequestType type = 4;       // 返回类型
    Role role = 5;          // 用户角色
}